--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -52,7 +52,7 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact & Feedback</a>
+                        <a class="nav-link" href="/#contact">Contact & Feedback</a>
                       </li>
 
                       <li class="nav-item dropdown">
